[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "med-triage-env"
version = "1.0.0"
description = "Medical Emergency Department Triage OpenEnv environment"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "pyyaml==6.0.1",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["med_triage_env*"]

[project.urls]
Homepage = "https://huggingface.co/spaces/Neharika1203/med-triage-env"
Repository = "https://github.com/neharika004/med-triage-env"
