[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "med-triage-env"
version = "1.0.0"
description = "Medical Emergency Department Triage OpenEnv environment"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.1",
    "openai>=2.7.2",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[project.urls]
Homepage = "https://huggingface.co/spaces/Neharika1203/med-triage-env"
Repository = "https://github.com/neharika004/med-triage-env"
